Configurado Firebase. ATENCIÓN EL ARCHIVO app/google-services.json se ha añadido al gitignore

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,5 +29,6 @@
                 android:value="com.pla1.cifo.ahuesoa.pac1.BookListActivity" />
         </activity>
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
