--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.2'
     implementation 'com.google.firebase:firebase-auth:16.0.2'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.github.satyan:sugar:1.5'
 
 
     testImplementation 'junit:junit:4.12'
