Cambiado el manifest porque al poner el DomainPackageName no funciona el SugarORM

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,11 @@
         android:theme="@style/AppTheme"
         android:name="com.orm.SugarApp">
 
-        <meta-data android:name="DATABASE" android:value="books.db" />
+        <meta-data android:name="DATABASE" android:value="bookItem.db" />
         <meta-data android:name="VERSION" android:value="1" />
         <meta-data android:name="QUERY_LOG" android:value="true" />
-        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.pla1.cifo.ahuesoa.pac1" />
+
+
 
         <activity
             android:name=".BookListActivity"
