--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+    ext {
+        versions = [
+                androidX: '1.0.0',
+                constraintLayout: '1.1.3'
+        ]
+    }
     repositories {
         google()
         jcenter()
+        mavenCentral()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0'
@@ -19,6 +26,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
 }
 
